update assertJ, update grpc
Test files were modified to fix bug https://github.com/assertj/assertj-core/issues/2361

GitOrigin-RevId: 1ddaf20723309a75c2bf3c26b93264aa97be639f